FIND_PACKAGE(WrapITK REQUIRED)

INCLUDE_DIRECTORIES(BEFORE ${PROJECT_SOURCE_DIR})

# include new declaration of types
INCLUDE(WrapITKTypes.cmake)

BEGIN_WRAPPER_LIBRARY("${PROJECT_NAME}")
SET(WRAPPER_LIBRARY_DEPENDS Base)
set(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKStatistics ITKReview)

# ComponentTree class mus be imported before the others
SET(WRAPPER_LIBRARY_GROUPS
  itkComponentTree
)

WRAPPER_LIBRARY_CREATE_WRAP_FILES()
WRAPPER_LIBRARY_CREATE_LIBRARY()

